--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -117,10 +117,10 @@ jobs:
         go-version: '1.21.8'
 
     - name: golangci-lint
-      uses: golangci/golangci-lint-action@v8
+      uses: golangci/golangci-lint-action@v6
       with:
-        version: latest
-        args: --timeout=5m
+        version: v1.55.2
+        args: --timeout=5m --skip-dirs=vendor
 
   release:
     name: Release
